Generate code coverage using Jacoco with Sonarqube